--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "idProtect",
+  "name": "heptalytics",
   "version": "1.0.0",
   "description": "A great Wordrpress theme",
   "author": "ThatMuch",
